--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.adunik_krishi">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Adunik_Krishi">
         <activity
-            android:name=".screens.ForgetPasswordActivity"
+            android:name=".screens.OTPActivity"
             android:exported="true"
             android:parentActivityName=".screens.LoginActivity"/>
         <activity
@@ -27,7 +29,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".text" />
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
