--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-database'
 
+    implementation 'com.android.volley:volley:1.2.1'
+
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
