--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,21 +2,29 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.adunik_krishi">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Adunik_Krishi">
+        android:theme="@style/Theme.Adunik_Krishi"
+        android:networkSecurityConfig="@xml/network_security_config">
+        <activity
+            android:name=".screens.WeatherActivity"
+            android:exported="true" />
         <activity
             android:name=".screens.OTPActivity"
             android:exported="true"
-            android:parentActivityName=".screens.LoginActivity"/>
+            android:parentActivityName=".screens.LoginActivity" />
         <activity
             android:name=".screens.RegisterActivity"
             android:exported="true"
-            android:parentActivityName=".screens.LoginActivity"/>
+            android:parentActivityName=".screens.LoginActivity" />
         <activity
             android:name=".screens.LoginActivity"
             android:exported="true">
@@ -27,7 +35,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".text" />
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
