--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,8 @@ dependencies {
     implementation 'com.codesgood:justifiedtextview:1.1.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
 }
