--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
     <application
         android:allowBackup="true"
@@ -16,7 +17,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.Adunik_Krishi">
+
         <activity
             android:name=".screens.AddQuestionActivity"
             android:exported="true" />
@@ -53,6 +56,8 @@
         <activity android:name=".screens.WeatherActivity" />
         <activity android:name=".ChasabadPoddoti" />
         <activity android:name=".FishCahsabad" />
+        <activity android:name=".Market_Price"
+            android:parentActivityName=".MainActivity"></activity>
     </application>
 
 </manifest>
