--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -17,9 +17,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.Adunik_Krishi">
-
+        android:theme="@style/Theme.Adunik_Krishi"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".screens.BuyandSellActivity"
+            android:exported="true" />
         <activity
             android:name=".screens.AddQuestionActivity"
             android:exported="true" />
@@ -56,8 +58,9 @@
         <activity android:name=".screens.WeatherActivity" />
         <activity android:name=".ChasabadPoddoti" />
         <activity android:name=".FishCahsabad" />
-        <activity android:name=".Market_Price"
-            android:parentActivityName=".MainActivity"></activity>
+        <activity
+            android:name=".Market_Price"
+            android:parentActivityName=".MainActivity" />
     </application>
 
 </manifest>
